Added earnings and dividend reports

--- a/UX2017/Views/News/News.cshtml
+++ b/UX2017/Views/News/News.cshtml
@@ -5,7 +5,7 @@
 <div class="col-md-8 col-md-offset-2 col-lg-8 col-md-offset-2">
     <h3>@ViewBag.News.Headline</h3>
 
-    <img src="@ViewBag.News.ImageUrl" style="margin: 10px;"/>
+    <img src="@ViewBag.News.ImageUrl" style="margin: 10px;"/><br/>
 
     @Html.Raw(@ViewBag.News.Body)
 </div>
