--- a/UX2017/Views/News/News.cshtml
+++ b/UX2017/Views/News/News.cshtml
@@ -16,6 +16,8 @@
 
             @Html.Raw(ViewBag.News.Body)
         </div>
-        <div id="related-topics"></div>
+        <div id="related-topics">
+            
+        </div>
     </div>
 </div>
