--- a/UX2017/Views/News/RelatedStocks.cshtml
+++ b/UX2017/Views/News/RelatedStocks.cshtml
@@ -1,4 +1,6 @@
-﻿@if (ViewBag.RelatedStocks != null)
+﻿<h5><b>Related stocks</b></h5>
+
+@if (ViewBag.RelatedStocks != null)
 {
     <div class="row">
         <div class="col-md-4 col-lg-4"><b>Symbol</b></div>
