Cleanup and added profile page

--- a/UX2017/Views/News/News.cshtml
+++ b/UX2017/Views/News/News.cshtml
@@ -19,7 +19,7 @@
         <div id="related-topics">
             @if (ViewBag.NewsArticles != null)
             {
-                <h3>Related topics:</h3>
+                <h3>Related stories:</h3>
                 foreach (var article in ViewBag.NewsArticles)
                 {
                     <div style="margin-bottom: 20px;">
