--- a/UX2017/Views/Profile/Profile.cshtml
+++ b/UX2017/Views/Profile/Profile.cshtml
@@ -2,11 +2,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<br/><br/>
+
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-lg-6">
-            <div id="symbol">@ViewBag.Profile.ExchangeName (@ViewBag.Profile.Symbol)</div>
-            <div id="price">@ViewBag.Quote.LastPrice</div>
+            <h3 id="symbol">@ViewBag.Profile.ExchangeName (@ViewBag.Profile.Symbol)</h3>
+            <div class="row">
+                <h1 id="price">@ViewBag.Quote.LastPrice</h1>
+                <h3>@string.Format("{0:n2}",ViewBag.Quote.NetChange) (@string.Format("{0:n2}", ViewBag.Quote.PercentChange)%)</h3>
+            </div>
         </div>
         <div class="col-md-6 col-lg-6">
             <img src="@ViewBag.Chart.ImageUrl" />
@@ -33,9 +38,9 @@
         </ul>
         <div class="tab-content">
             <div class="tab-pane active" id="tab-keydata">
-                <p>
-                    Key data
-                </p>
+                <div class="col-md-8 col-md-offset-2 col-lg-8 col-md-offset-2">
+                    Key Data
+                </div>
             </div>
             <div class="tab-pane fade" id="tab-profile">
                 <div class="col-md-8 col-md-offset-2 col-lg-8 col-md-offset-2">
@@ -59,14 +64,14 @@
                 </div>
             </div>
             <div class="tab-pane fade" id="tab-technical">
-                <p>
+                <div class="col-md-8 col-md-offset-2 col-lg-8 col-md-offset-2">
                     Technical
-                </p>
+                </div>
             </div>
             <div class="tab-pane fade" id="tab-earnings">
-                <p>
+                <div class="col-md-8 col-md-offset-2 col-lg-8 col-md-offset-2">
                     Earnings
-                </p>
+                </div>
             </div>
         </div>
     </div>
