Final formatting, top bar

--- a/UX2017/Views/Profile/Profile.cshtml
+++ b/UX2017/Views/Profile/Profile.cshtml
@@ -98,7 +98,7 @@
                             <td>
                                 @if (ViewBag.Estimate.ExDividendDate != null)
                                 {
-                                    @ViewBag.Estimate.ExDividendDate.ToString("yyyy-MM-dd")
+                                    @ViewBag.Estimate.ExDividendDate.ToString("MM/dd/yy")
                                 }
                             </td>
                         </tr>
