--- a/UX2017/Views/Home/Index.cshtml
+++ b/UX2017/Views/Home/Index.cshtml
@@ -3,13 +3,15 @@
 }
 
 <br/>
-<div class="col-md-8 col-md-offset-2 col-lg-8 col-md-offset-2">
-    @foreach (var article in ViewBag.NewsArticles)
-    {
-        <div style="margin: 15px; margin-bottom: 20px;">
-            
-            @Html.ActionLink((string)article.Headline, "News", "News", new { newsID = article.NewsID }, new { @class = "h4"})
-            <p>@article.Body</p>
-        </div>
-    }
+<div class="container">
+    <div class="col-md-8 col-md-offset-2 col-lg-8 col-md-offset-2">
+        @foreach (var article in ViewBag.NewsArticles)
+        {
+            <div style="margin: 15px; margin-bottom: 20px;">
+
+                @Html.ActionLink((string)article.Headline, "News", "News", new { newsID = article.NewsID }, new { @class = "h4" })
+                <p>@article.Body</p>
+            </div>
+        }
+    </div>
 </div>
