Moved financial summary generation to INewsGenerator

--- a/UX2017/Views/Shared/_Layout.cshtml
+++ b/UX2017/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @*@Html.ActionLink("News", "News", "Home", new { symbol = "AAPL" }, new { @class = "navbar-brand" })*@
+                @*@Html.ActionLink("Real News", "News", "Home", new { symbol = "AAPL" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -27,6 +27,9 @@
                     @*<li>@Html.ActionLink("Earnings", "EarningsNews", "News")</li>
                     <li>@Html.ActionLink("Dividends", "DividendsAnnouncement", "News")</li>*@
                 </ul>
+            </div>
+            <div>
+                @* TODO: Add search textbox here. Redirect on enter to Home/News?symbol *@
             </div>
         </div>
     </div>
